--- a/templates/allocate.html
+++ b/templates/allocate.html
@@ -1,10 +1,9 @@
-<!doctype html>
-<html>
-<head>
+{% extends "base.html" %}
+{% block head %}
 <title> Allocate </title>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-</head>
-<body>
+{% endblock %}
+{% block body %}
 <script>
 $(document).ready(function(){
 $("input").click(function(){
@@ -33,5 +32,4 @@ $("input").click(function(){
 </table>
 <br><br>
 <div id='details'></div>
-</body>
-</html>
+{% endblock %}
