Bug fix-change index after assigning duty. Finalize the output chart printing

--- a/templates/chart.html
+++ b/templates/chart.html
@@ -1,7 +1,7 @@
 <ul>
-<li>Backup Faculties = {{ sessions[0][0] }}</li>
-<li>Squad = {{ sessions[0][1] }}</li>
-<li>HoD = {{ sessions[0][2] }}</li>
+<li>HoD = {{ sessions[0][1] }}</li>
+<li>Squad = {{ sessions[0][0] }}</li>
+<li>Backup = {{ sessions[0][2] }}</li>
 </ul>
 {% for session in sessions[1:] %}
 <ul>
