--- a/templates/allocate.html
+++ b/templates/allocate.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block head %}
 <title> Allocate </title>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+<script src="jquery-3.1.1-min.js"></script>
 {% endblock %}
 {% block body %}
 <script>
