--- a/templates/details.html
+++ b/templates/details.html
@@ -1,14 +1,7 @@
 {% extends "base.html" %}
 {% block head %}
 <title>Details</title>
-<style>
-table, th, td {
-border : 1px solid black;
-border-collapse : collapse;
-padding: 15px;
-}
-</style>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+<script src="jquery-3.1.1-min.js"></script>
 {% endblock %}
 {% block body %}
 <script>
