Files merge for front end

--- a/templates/chart.html
+++ b/templates/chart.html
@@ -1,3 +1,9 @@
+<style>
+   ul li{
+        font-size: 20pt;
+
+    }
+</style>
 <ul>
 <li>HoD = {{ sessions[0][1] }}</li>
 <li>Squad = {{ sessions[0][0] }}</li>
