Front end style update

--- a/templates/input.html
+++ b/templates/input.html
@@ -3,7 +3,7 @@
 <style>
     tr td{
         font-family: 'Times New Roman', Times, serif;
-        font-size: 20pt;
+        font-size: 12pt;
 
     }
     body{
@@ -32,6 +32,7 @@
 <table>
     <br>
     <br>
+<tr><td> Name= Dr. H. V. Ravish Aradhya </td><td> Email= ravisharadhya@rvce.edu.in </td><td> Designation= HoD </td></tr>
     {% for fac in fac_list %}
 
 <tr><td> Name={{ fac[0] }}</td><td> Email={{fac[1]}}</td><td> Designation={{fac[2]}}</td></tr>
